# obs-first-time-chatter-plugin

./: .gitignore  CMakeLists.txt  README.md
src/: first-time-chatter-dock.cpp  first-time-chatter-dock.hpp  plugin-main.cpp  settings-dialog.cpp  settings-dialog.hpp  twitch-irc-client.cpp  twitch-irc-client.hpp
